PlayersGenerator class added